# moss-lang

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Moss Studio.spec  README.md  RELEASE.md  SECURITY.md  _final_tally.txt  _fix_local.py  _fix_pipe.py  _fix_tok2.py  _test_self.py  audit-report.md  corvus.cmd  corvus.ps1  corvus_chat.json  moss-lsp.spec  moss-native.sh  moss.spec  moss.toml  nuke-report.md  pyproject.toml
.openclaw/: workspace-state.json
audit_tests/: 2a_syntax_error.moss  2b_type_error.moss  2d_undeclared_effect.moss  2e_duplicate.moss  2f_match_not_exhaustive.moss  2g_empty_file.moss  2h_type_confusion.moss  2i_effect_in_rule.moss  2i_effect_in_rule_v2.moss  3a_no_rules.moss  3b_various_rule_values.moss  3c_multi_rule.moss  4a_no_golden.moss  4b_golden_match.moss  4b_golden_match.moss.golden  4c_golden_mismatch.moss  4c_golden_mismatch.moss.golden  f5_unused_in_fn.moss  order_v6.tampered.json  order_v6.trust.json  v5_arrow_boundary.moss  v6_original.trust.json  v6_tampered.trust.json  v8_lambda.moss
docs/: LANGUAGE_SPEC.md  cvm-security.md  ds-branch-review.md  ecosystem.md  github-linguist.md  grove.md  history.md  identity.md  language.md  moss-guide.md  paper-trust-artifact.md  projects.md  python-ffi.md  release-0.5.5.md  release-0.5.6.md  release-0.5.7.md  release-0.5.8.md  release-0.5.md  release-0.6.0.md  release.md  roadmap.md  studio.md  threat-model.md  token-artifact.md  tooling.md  trust-artifact.md  trust-server-api.md  windows.md
editors/: moss.tmLanguage.json
examples/: effect_error.moss  import_demo.moss  (+13 more)
(+93 files in other folders)
